--- a/style/galeria.scss
+++ b/style/galeria.scss
@@ -79,64 +79,60 @@ nav a:hover{
 /* inicio css main galeria */
 
 .mainGaleria{
-    height: 100vh;
+    height: 150vh;
     width: 100%;
     background-color: $color5;
     display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    grid-template-rows:  repeat(11, 1fr);
     padding: 25px;
     grid-gap: 15px;
+    img{
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
 }
 
 .foto1{
-    grid-column: 1/3;
-    grid-row: 1/3;
-    background-image: url(../media/img/IMG_8844.JPG);
-    background-size: cover;
-    background-position: center;
+    grid-column: 1/5;
+    grid-row: 1/5;
 }
 
 .foto2{
-    grid-column: 3/4;
-    grid-row: 1/3;
-    background-image: url(../media/img/IMG_3476.JPG);
-    background-size: cover;
-    background-position: center;
-    
+    grid-column: 5/6;
+    grid-row: 1/5;
 }
 
 .foto3{
-    grid-column: 4/5;
-    grid-row: 1/3;
-    background-image: url(../media/img/IMG_2345.JPG);
-    background-size: cover;
-    background-position: top;
-
+    grid-column: 6/7;
+    grid-row: 1/5;
 }
 
 .foto4{
-    grid-column: 5/6;
-    grid-row: 1/3;
-    background-image: url(../media/img/IMG_9234.JPG);
-    background-size: cover;
-    background-position: center;
+    grid-column: 7/8;
+    grid-row: 1/5;
 }
 
 .foto5{
-    grid-column: 1/4;
-    grid-row: 3/5;
-    background-image: url(../media/img/IMG_3733.JPG);
-    background-size: cover;
-    background-position: end;
+    grid-column: 1/5;
+    grid-row: 5/9;
 }
 
 .foto6{
-    grid-column: 4/6;
-    grid-row: 3/5;
-    background-image: url(../media/img/IMG_2543.JPG);
-    background-size: cover;
-    background-position: center;
+    grid-column: 5/8;
+    grid-row: 5/9;
 }
 
+.foto8{
+    grid-column: 1/5;
+    grid-row: 9/12;
+}
+
+.foto9{
+    grid-column: 5/8;
+    grid-row: 9/12;
+}
 
 /* fin css main galeria */
 
@@ -195,7 +191,7 @@ nav a:hover{
 /* fin css footer */
 
 
-@media only screen and (min-width: 1024px){
+@media only screen and (min-width: 1020px){
 
 .headerOficial{
     height: 170px;
@@ -220,30 +216,14 @@ nav ul{
 
 /* inicio media query main */
 
-.mainGaleria{
-    display: grid;
-    grid-template-columns: repeat(5, 1fr); 
-    grid-template-rows: repeat(4, 1fr);
+.foto7{
+    grid-column: 5/6;
+    grid-row: 1/5;
 }
-
-
-.foto1{
-    background-position-x: 0px;
-}
-
-
-.foto3{
-    background-position: initial;
-}
-
 .foto2{
-    background-image: url(../media/img/IMG_9710.JPG);
-    background-position: top;
+    display: none;
 }
 
-.foto4{
-    background-position-x: 470px;
-}
 
 /* fin media query main */
 
@@ -295,74 +275,51 @@ nav ul{
 /* inicio media query main */
 
 .mainGaleria{
-    height: 280vh;
+    height: 300vh;
     width: 100%;
     display: grid;
     grid-template-columns: 0fr 1fr 0fr ;
-    grid-template-rows: repeat(12, 1fr);
+    grid-template-rows: repeat(14, 1fr);
     padding: 10px;
-    
 }
 
 .foto1{
     grid-column: 2/3;
     grid-row: 1/3;
-    background-image: url(../media/img/IMG_8844.JPG);
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
 }
 
 .foto2{
     grid-column: 2/3;
     grid-row: 3/5;
-    background-image: url(../media/img/IMG_3476.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
 }
 
 .foto3{
-    grid-column: 2/3;
-    grid-row: 5/7;
-    background-image: url(../media/img/IMG_1932.jpg);
-    background-size: cover;
-    background-position: top;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
+    display: none;
 }
 
 .foto4{
     grid-column: 2/3;
     grid-row: 7/9;
-    background-image: url(../media/img/IMG_9234.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
 }
 
 .foto5{
     grid-column: 2/3;
     grid-row: 9/11;
-    background-image: url(../media/img/IMG_3733.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
 }
 
 .foto6{
     grid-column: 2/3;
     grid-row: 11/13;
-    background-image: url(../media/img/IMG_2543.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 700px 450px;
-    background-repeat: no-repeat;
+}
+
+.foto8{
+    grid-column: 2/3;
+    grid-row: 5/7;
+}
+
+.foto9{
+    grid-column: 2/3;
+    grid-row: 13/15;
 }
 
 /* fin media query main */
@@ -453,62 +410,31 @@ header a{
 .foto1{
     grid-column: 2/3;
     grid-row: 1/3;
-    background-image: url(../media/img/IMG_8844.JPG);
-    background-size: cover;
-    background-position: center;
-    height: 100%;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
 .foto2{
     grid-column: 2/3;
     grid-row: 3/5;
-    background-image: url(../media/img/IMG_3476.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
-.foto3{
+.foto8{
     grid-column: 2/3;
     grid-row: 5/7;
-    background-image: url(../media/img/IMG_1932.jpg);
-    background-size: cover;
-    background-position: top;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
 .foto4{
     grid-column: 2/3;
     grid-row: 7/9;
-    background-image: url(../media/img/IMG_9234.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
 .foto5{
     grid-column: 2/3;
     grid-row: 9/11;
-    background-image: url(../media/img/IMG_3733.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
 .foto6{
     grid-column: 2/3;
     grid-row: 11/13;
-    background-image: url(../media/img/IMG_2543.JPG);
-    background-size: cover;
-    background-position: center;
-    background-size: 400px 300px;
-    background-repeat: no-repeat;
 }
 
 /* fin media query main */
